# covey_asset_loader

./: Cargo.toml  README.md
examples/: main_menu.rs
examples/basic/: main.rs  splash.rs
macros/: Cargo.toml
macros/src/: asset_collection.rs  asset_state.rs  lib.rs
src/: app_ext.rs  commands_ext.rs  lib.rs
