[package]
name = "covey_asset_loader"
authors = ["Chung Wong"]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for asset loading"
repository = "https://github.com/chungwong/covey_asset_loader"
homepage = "https://github.com/chungwong/covey_asset_loader"
documentation = "https://docs.rs/covey_asset_loader"
keywords = ["bevy", "gamedev", "asset", "assets"]
categories = ["game-development"]
readme = "README.md"

[workspace]
members = [
    "macros"
]

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_asset"] }
covey_asset_loader_macros = { version = "0.1.0", path = "./macros" }

[dev-dependencies]
bevy = { version = "0.10" }
bevy-inspector-egui = "0.18.3"
